--- a/site/public/dashboard/edicao-aviso.html
+++ b/site/public/dashboard/edicao-aviso.html
@@ -26,7 +26,7 @@
 
         <div class="header-left">
 
-            <h1>AcquaTec</h1>
+            <h1>CSME</h1>
 
             <div class="hello">
                 <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
