--- a/site/public/dashboard/mural.html
+++ b/site/public/dashboard/mural.html
@@ -26,26 +26,16 @@
 
         <div class="header-left">
 
-            <h1>AcquaTec</h1>
+            <h1>CSME</h1>
 
             <div class="hello">
                 <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
             </div>
 
             <div class="btn-nav-white">
-                <a href="cards.html">
-                    <h3>Aquários</h3>
-                </a>
-            </div>
-
-            <div class="btn-nav-white">
                 <a href="./dashboard.html">
                     <h3>Gráficos</h3>
                 </a>
-            </div>
-
-            <div class="btn-nav">
-                <h3>Mural de Avisos</h3>
             </div>
 
             <div class="btn-logout" onclick="limparSessao()">
