--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -60,9 +60,8 @@
                 <ul class="navbar">
                     <li><a href="index.html">Início</a></li>
                     <li><a href="csgo-brasil.html">CS:GO no Brasil</a></li>
-                    <li><a href="">Mercado Financeiro</a></li>
-                    <li><a href="">ME</a></li>
-                        
+                    <li><a href="financeiro.html">Mercado Financeiro</a></li>
+                   
                     </li>
                     <a class="link_a" href="login.html">Entrar</a>
                     </li>
